# hauntfall

./: .gitignore  Cargo.toml
clnt/: Cargo.toml  Web.toml
clnt/src/: controls.rs  item.rs  main.rs  net.rs  renderer.js  renderer.rs
comn/: Cargo.toml
comn/src/: lib.rs
comn/src/art/: mod.rs
comn/src/combat/: mod.rs
comn/src/controls/: mod.rs  movement.rs
comn/src/item/: mod.rs
comn/src/phys/: mod.rs
serv/: Cargo.toml  hauntfall_server_config.toml  map.json
serv/levels/basic/: map.json  script.fg  script.py  script.rhai
serv/src/: main.rs  pickup.rs
serv/src/combat/: alignment.rs  chase.rs  mod.rs
serv/src/config/: level.rs  mod.rs
serv/src/net/: login.rs  packets.rs  phys.rs
