[package]
name = "comn"
version = "0.1.0"
authors = ["Cedric Hutchings <cedhut02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
server = []
flagged_appearances = []
client = ["flagged_appearances"]
default = []

[dependencies]

# math/ecs
ncollide2d = { version = "0.21.0", features = ["serde-serialize"] }
nalgebra = { version = "0.19.0", features = ["serde-serialize"] }
specs = { version = "0.15.0", features = ["specs-derive", "serde"], default-features = false }

# serialization
serde = { version = "1.0.102", features = ["derive"] }
rmp-serde = "0.14.0"

# script
pyo3 = "0.8.3"

# util
strum_macros = "0.16.0"
lazy_static = "1.4.0"
